Home page update

--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a Computer Science undergraduate student studying at Arizona State University. My dream some day is to become a indie developer and start a business.
-								 I've had a passion in creating games for as long as I can remember and am very commited to the projects I create.</p>
+							<p>Hi, I am a junior Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
+								who play my games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
-										<li>Proficiant Languages: C#, C++, C.</li>
-										<li>Other languages that I've learned:<br> Java, HTML, Scheme, Prolog, Python, MIPS Assembly.</li>
+										<li>Proficiant Languages: C#, C++, C, Java.</li>
+										<li>Other languages that I've learned:<br>HTML, Scheme, Prolog, Python, MIPS Assembly.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>Over 4 years of experience with the Unity Creation Engine.</li>
+										<li>Over 5 years of experience with the Unity Creation Engine.</li>
 										<li>Currently the systems officer of The Game Design Club at ASU.</li>
 										<li>Participated in multiple game jams (More info Below).</li>
 								</section>
@@ -77,7 +77,8 @@
 									<h3>Animation & Art</h3>
 									<ul>
 										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
-										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app I use to create game assets.</li>
+										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
+										<li>Experience in <a href="https://www.blender.org/">Blender</a>, an app used to create 3D game assets.</li>
 								</section>
 							</div>
 						</div>
@@ -91,9 +92,9 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Rogue Nebula (2023)</h2>
-										<p> A project made for the Video Game Design Club during their summer session. Endlessly plow through waves of enemies in the persuite of a high score. A game that is
-											heavily inspired by classic arcade games like Galaga, Defender 1981, and Space Invaders. This game features a scrolling 3D envirnment, a reactive user interface,
-											vibrant special effects, and an assortment of enemy behaviors.
+										<p> A project made for the Video Game Design Club during their summer session. Endlessly plow through waves of enemies in the pursuit 
+											of a high score. The game is heavily inspired by classic arcade games like Galaga, Defender 1981, and Space Invaders. 
+											It features a scrolling 3D environment, a reactive user interface, vibrant special effects, and an assortment of enemy behaviors.
 										</p>
 										<ul class="actions">
 											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
@@ -106,10 +107,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Hell's Kitchen (2023)</h2>
-									<p>A project made with a small team for the Ludum Dare Game Jam #50 which is a challenge where competitors have 72 hours to create a game completely from scratch.
-										"Our game stars a doomed cheif that must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
-										interactable UI, a leaderboard system, cutscenes, and a level system. It was a blast working with each other on this project, so much so 
-										that we decided to port the game to mobile which is currently in progress. All assets and artwork are my own.
+									<p>A project made with a small team for the Ludum Dare Game Jam #50, which is a challenge where competitors have 72 hours to create a game completely 
+										from scratch. Our game stars a doomed chef who must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
+										 interactable UI, a leaderboard system, cutscenes, and a level system. It was a blast working with each other on this project, so much so that 
+										 we decided to port the game to mobile, which is currently in progress. All assets and artwork are my own.
 									</p>
 									<ul class="actions">
 										<li><a href="hells_kitchen.html" class="button">More Details</a></li>
@@ -139,10 +140,10 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Star Raid (2021)</h2>
-										<p>Star Raid was a very ambitious project that I was developing with one of my friends. Unfortunately developement for the game ceased
-											due to the increasingly large scope of the project and wanting to move forward with more interesting projects. This game was centered around co-op gameplay and
-											featured P2P client based multiplayer, a crafting system, A* pathfinding for
-											enemies, and raycasting projectiles, and a user based command system. All assets and artwork are my own.
+										<p>Star Raid was a very ambitious project that I was developing with one of my colleagues. Unfortunately, development for the game ceased due 
+											to the increasingly large scope of the project and our desire to move forward with more interesting projects. This game was centered 
+											around co-op gameplay and featured P2P client-based multiplayer, a crafting system, A* pathfinding for enemies, raycasting projectiles, 
+											and a user-based command system. All assets and artwork are my own.
 										</p>
 										<ul class="actions">
 											<li><a href="star_raid.html" class="button">More Details</a></li>
@@ -155,9 +156,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Space Journey (2022)</h2>
-									<p>Space Journey was a group project created for an engineering class using p5.js. The main focus of the project was to simulate an
-										environment and process similar to working with a professional team on a budget. We had a deadlines, sprints, peer evaluations, 
-										and presentations to make for "stakeholders". All assets and artwork are my own.</p>
+									<p>Space Journey was a group project created for an engineering class using p5.js. The main focus of the project was to simulate an environment and 
+										process similar to working with a professional team on a budget. We had deadlines, sprints, peer evaluations, and presentations to make for 
+										"stakeholders". All assets and artwork are my own.</p>
 									<ul class="actions">
 										<li><a href="space_journey.html" class="button">More Details</a></li>
 									</ul>
@@ -169,10 +170,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Spirit of Calamity (2020)</h2>
-									<p>Spirit of Calamity is personal project of mine that I have been working on for many years. This is my passion project, and although I feel very motivated to
-										create this, little has been done on this project because I'm looking for more experience before I tackle the challenge of making this 
-										dream project come true. Although I am not willing to share the source code of the project I can give a detailed description of what features
-										I have implementd in the "More Details" page. All assets and artwork are my own.
+									<p>Spirit of Calamity is a personal project of mine that I have been working on for many years. It's my passion project, and although I feel very 
+										motivated to create it, little has been done on this project. I'm seeking more experience before I tackle the challenge of making this dream project 
+										come true. While I'm not willing to share the source code, I can provide a detailed description of the features I have implemented on the "More Details" page. 
+										All assets and artwork are my own.
 									</p>
 									<ul class="actions">
 										<li><a href="soc.html" class="button">More Details</a></li>
@@ -185,7 +186,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Smaller Projects</h2>
-									<p>A collection of smaller projects that are from tutorials and courses. Most artwork is mine but some downloaded from free game asset sources.</p>
+									<p>A collection of smaller projects that are from tutorials and online courses. Most artwork is mine but some downloaded from free game asset sources.</p>
 									<ul class="actions">
 										<li><a href="other_pj.html" class="button">More Details</a></li>
 									</ul>
