--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									<div class="inner">
 										<h2>Star Raid (2021)</h2>
 										<p>Star Raid was a very ambitious project that I was developing with one of my colleagues. Unfortunately, development for the game ceased due 
-											to the increasingly large scope of the project and our desire to move forward with more interesting projects. This game was centered 
+											to the increasingly large scope of the project and our desire to move forward with more interesting projects overweighed our decision. This game was centered 
 											around co-op gameplay and featured P2P client-based multiplayer, a crafting system, A* pathfinding for enemies, raycasting projectiles, 
 											and a user-based command system. All assets and artwork are my own.
 										</p>
@@ -207,6 +207,10 @@
 										<li>
 											<h3>Developer Email</h3>
 											<p>dev.ryan1184@gmail.com
+										</li>
+										<li>
+											<h3>School Email</h3>
+											<p>rjcarpe2@asu.edu
 										</li>
 										<li>
 											<h3>Social</h3>
