--- a/other_pj.html
+++ b/other_pj.html
@@ -38,12 +38,12 @@
 							<section>
 								<div class="box alt">
 									<div class="row gtr-uniform">
-										<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic11.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic12.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/apple_desc.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/ball_desc.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/ship_desc.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/tiny_title.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/dnd_desc.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/dwarf_title.jpg" alt="" /></span></div>
 									</div>
 								</div>
 							<p>The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
