--- a/fishy_business.html
+++ b/fishy_business.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan's Portfolio - Space Journey</title>
+		<title>Ryan's Portfolio - Fishy Business</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
-						<li><a href="space_journey.html" class="active">Space Journey</a></li>
+						<li><a href="fishy_business.html" class="active">Space Journey</a></li>
 						<li><a href="other_pj.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
@@ -36,26 +36,22 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Space Journey</h1>
+							<h1 class="major">Fishy Business</h1>
 							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
 							<span class="image fit"><img src="images/space_gameplay_2.gif" alt="" /></span>
 							<h2>Summary</h2>
-							<p>Space Journey was a group project that was created in p5.js for a engineering class. The main focus of the project was on making the environment and process
-								similar to working with a professional team on a budget. We had a deadline, sprint organization, peer evaluations, and a presentation for the stakeholders.
-								Even though this project was for a class my team and I thoroughly enjoyed working together and took it very seriously. The game's target audience was suppose
-								to be for children so we kept the games we made fairly easy while also making them fun and engaging. The game is set in space with each activity keeping true
-								to the theme.
+							<p>Fishy Business was a group project created for a game developement class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The main focus of the project was to simulate an environment and 
+								process similar to working with a professional studio. We had deadlines, checkups, peer evaluations, design documentation, and presentations. I was the group leader and the main
+								gameplay programer. A snapshot of this project can be found on our <a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
 							</p>
 							<span class="image fit"><img src="images/space_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p>There are three accessable games through the menu. There's a maze game where the player needs to draw their cursor to the end of the level without touching any walls.
-								If a wall is touched a "You Lose" text will prompt on the screen but the player only has to go back to start to restart. After the player is done with the game they
-								may click on the "menu" button on the top left of the screen to go back to the menu and select another game. The second game is an aim trainer. The player needs to click on the targets as
-								they appear but quickly before the timer runs out. When the timer runs out the game will end and the score they get will be thier final score. After the player may click
-								on the Menu button to choose another game. The final game is a memory matcher. The player must memorize the colors as they appear on the prompt as they will need to enter
-								those colors in a sequence at the end of the round. If the player gets the sequence correct then they gain a score of +100 but if they get it wrong then they will lose a
-								life. Once all lives are lost the game ends and whatever the player's score is before then is their final score. The player may then click on the "menu" button to select
-								another game.
+							<p>Fishy Business is a lively fishing game in which the player can freely fish in a small lake environment, sell their catches, and buy new gear.
+								The player starts in a place called the "Overworld" where they can traverse a small lake area. Here, the player can	interact with the lake to fish
+								and Fisher Frog to buy and sell gear. The player can buy and upgrade their rod to increase the occurance chance of fish (the chance that a more rare fish
+								will spawn), thier line to increase their tension meter (a meter that appears on the screen when the player is fighting a fish  ), and their bait to
+								raise bite chance (the chance that a fish will bite onto their rod). Each fish is unique and come with their own chances and value. The more rare the catch
+								the more valuable the fish is to sell. 
 							</p>
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
@@ -69,13 +65,13 @@
 									<tbody>
 										<tr>
 											<td>Functional UI</td>
-											<td>UI buttons in the menu and games to navigate through the space.
+											<td>UI buttons in the menu and games to navigate through the space aswell as guides to help the player learn the controls.
 											</td>
 											<td></td>
 										</tr>
 										<tr>
-											<td>Timer</td>
-											<td>A timer function is used for the Aim Trainer and Memory games.</td>
+											<td>Inventory System</td>
+											<td>Modular inventory system that supports equip items, swapping, organizing, selling, and fish catching.</td>
 										</tr>
 										<tr>
 											<td>Moving Images in the Menu</td>
