--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a junior Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
-								who play my games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.</p>
+							<p>Hello, I'm a junior Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
+								who play games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
 										<li>Proficiant Languages: C#, C++, C, Java.</li>
-										<li>Other languages that I've learned:<br>HTML, Scheme, Prolog, Python, MIPS Assembly.</li>
+										<li>Other languages that I've learned:<br>HTML, Scheme, Prolog, Python.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>Over 5 years of experience with the Unity Creation Engine.</li>
-										<li>Currently the systems officer of The Game Design Club at ASU.</li>
+										<li>Over 6 years of experience with the Unity Creation Engine.</li>
+										<li>Systems officer of The Game Design Club at ASU.</li>
 										<li>Participated in multiple game jams (More info Below).</li>
 								</section>
 								<section>
@@ -76,9 +76,9 @@
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
 									<ul>
-										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
-										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
 										<li>Experience in <a href="https://www.blender.org/">Blender</a>, an app used to create 3D game assets.</li>
+										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
+										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
 								</section>
 							</div>
 						</div>
@@ -155,12 +155,12 @@
 							<a href="#" class="image"><img src="images/space_title.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Space Journey (2022)</h2>
-									<p>Space Journey was a group project created for an engineering class using p5.js. The main focus of the project was to simulate an environment and 
-										process similar to working with a professional team on a budget. We had deadlines, sprints, peer evaluations, and presentations to make for 
-										"stakeholders". All assets and artwork are my own.</p>
+									<h2>Fishy Business (2023)</h2>
+									<p>Fishy Business was a group project created for a game developement class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The main focus of the project was to simulate an environment and 
+										process similar to working with a professional studio. We had deadlines, checkups, peer evaluations, design documentation, and presentations. I was the group leader and the main
+										gameplay programer. A snapshot of this project can be found on our <a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
 									<ul class="actions">
-										<li><a href="space_journey.html" class="button">More Details</a></li>
+										<li><a href="fishy_business.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
