--- a/fishy_business.html
+++ b/fishy_business.html
@@ -70,24 +70,36 @@
 											<td></td>
 										</tr>
 										<tr>
+											<td>Overworld</td>
+											<td>Game divided into two separate gameplay areas. An overworld, where the player can explore, access their inventory, and
+												shop. The minigame, where the player enters a fun gameplay loop for catching fish.
+											</td>
+										</tr>
+										<tr>
+											<td>Fishing Gameplay</td>
+											<td>Gameplay functionality for rod casting, line reeling, and catching.</td>
+										</tr>
+										<tr>
 											<td>Inventory System</td>
 											<td>Modular inventory system that supports equip items, swapping, organizing, selling, and fish catching.</td>
 										</tr>
 										<tr>
-											<td>Moving Images in the Menu</td>
-											<td>Images or sprites are moved across the sceen randomly in the menu using the screen space coordinates.</td>
+											<td>Special Fish Behavior</td>
+											<td>Individual fish bahavior that's effected by a set a states. A swim state where fish will swim back and fourth aimlessly around
+												the screen. A timid state where the fish slowly approaches the lure. A bite state where the fish thrashes violently on the bait.
+											</td>
 										</tr>
 										<tr>
-											<td>Tutorials</td>
-											<td>The game features tutorials before each game to make sure the player knows what to do.</td>
+											<td>Shop</td>
+											<td>The game features a shop where the player can transfer items to their inventory for a price.</td>
 										</tr>
 										<tr>
 											<td>Custom Artwork</td>
-											<td>The sprite and background work are done by me using a pixel editing software called <a href="https://www.aseprite.org/">aseprite</span></a>.
+											<td>Tileset artwork and level design with the help of <a href="https://www.aseprite.org/">aseprite</span></a>, a sprite making software.
 											</td>
 										</tr>
 											<td>Music and Sound</td>
-											<td>Sounds found from free website and mixed. <a href="https://opengameart.org/">https://opengameart.org/</span></a></td>
+											<td>Sounds found from free sources and mixed.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -95,7 +107,9 @@
 							<br>
 							<br>
 							<ul class="icons">
-								<li>Link to Game and Code - <a href="https://editor.p5js.org/crobin62/sketches/LRRld1dKG">https://editor.p5js.org/crobin62/sketches/LRRld1dKG</span></a></li>
+								<li>Post Mortem Video - <a href="https://youtube.com/watch?v=q4LZavW0Aq0">https://youtube.com/watch?v=q4LZavW0Aq0</span></a></li>
+								<li>Link to Game - <a href="https://fishy-devs.itch.io/fishy-business">https://fishy-devs.itch.io/fishy-business</span></a></li>
+								<li>Repository Link - <a href="https://github.com/dev-rygy/Fishy-Business">https://github.com/dev-rygy/Fishy-Business</span></a></li>
 							</ul>
 						</div>
 					</section>
