--- a/fishy_business.html
+++ b/fishy_business.html
@@ -109,7 +109,7 @@
 							<ul class="icons">
 								<li>Post Mortem Video - <a href="https://youtube.com/watch?v=q4LZavW0Aq0">https://youtube.com/watch?v=q4LZavW0Aq0</span></a></li>
 								<li>Link to Game - <a href="https://fishy-devs.itch.io/fishy-business">https://fishy-devs.itch.io/fishy-business</span></a></li>
-								<li>Repository Link - <a href="https://github.com/dev-rygy/Fishy-Business">https://github.com/dev-rygy/Fishy-Business</span></a></li>
+								<li>Repository Link - <a href="https://github.com/dev-rygy/Fishy-Business" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 					</section>
