Fixed some navigation issues

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://www.linkedin.com/in/ryan-carpenter-4bba08182/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-												<li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/dev-rygy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.facebook.com/ryan.carpenter.756412/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											</ul>
 										</li>
