--- a/soc.html
+++ b/soc.html
@@ -20,9 +20,12 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
+						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
+						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="bloodlust.html">Bloodlust</a></li>
+						<li><a href="star_raid.html">Star Raid</a></li>
+						<li><a href="fishy_business.html">Fishy Business</a></li>
 						<li><a href="soc.html" class="active">Spirit of Calamity</a></li>
-						<li><a href="tiny_knight.html">Tiny Knight</a></li>
-						<li><a href="angry_apple.html">Angry Apple</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
