--- a/star_raid.html
+++ b/star_raid.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan's Portfolio - Spirit of Calamity</title>
+		<title>Ryan's Portfolio - Star Raid</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,11 +20,12 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
+						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html" class="active">Star Raid</a></li>
-						<li><a href="space_journey.html">Space Journey</a></li>
-						<li><a href="other_pj.html">Spirit of Calamity</a></li>
+						<li><a href="fishy_business.html">Fishy Business</a></li>
+						<li><a href="soc.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
