--- a/bloodlust.html
+++ b/bloodlust.html
@@ -20,11 +20,12 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
+						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
-						<li><a href="bloodlust.html" class="active">Bloodlust </a></li>
+						<li><a href="bloodlust.html" class="active">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
-						<li><a href="space_journey.html">Space Journey</a></li>
-						<li><a href="other_pj.html">Spirit of Calamity</a></li>
+						<li><a href="fishy_business.html">Fishy Business</a></li>
+						<li><a href="soc.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
