Game link fixes

--- a/bloodlust.html
+++ b/bloodlust.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html" class="active">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -39,13 +39,13 @@
 						<div class="inner">
 							<h1 class="major">Bloodlust</h1>
 							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
-							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
+							<span class="image fit"><img src="images/blood_gameplay_2.gif" alt="" /></span>
 							<h2>Summary</h2>
 							<p>Bloodlust is a game I made with one of my friends for Ludum Dare 49. Ludum Dare is a contest where you are given 72 hours to create a small game based
 								on a particular theme. The theme choosen for this jam was "Prevent the Inevitable" and it was also close to Halloween so we decided to make a game
 								about a vampire who must feast on his victims to survive.
 							</p>
-							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
+							<span class="image fit"><img src="images/blood_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
 							<p>The player starts with a full blood count which starts ticking at the beginning of the game. Once the count reaches zero the player dies. Watch the guard's
 								scheduals to know when the best time to strike will be. But be wary if you let a victim get away they will alert the nearest guard. Some NPCs have weapons
@@ -89,7 +89,7 @@
 								</table>
 							<br>
 							<ul class="icons">
-								<li>Link to Prototype - <a href="https://madness1184.itch.io/bloodlust">https://madness1184.itch.io/bloodlust</span></a></li>
+								<li>Link to Prototype - <a href="https://madcolors-entertainment.itch.io/bloodlust">https://madcolors-entertainment.itch.io/bloodlust</span></a></li>
 								<li>Repository Link - <a href="https://github.com/MaDness1184/Bloodlust-LDGJ-Version" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
