--- a/hells_kitchen.html
+++ b/hells_kitchen.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan's Portfolio - Hells Kitchen</title>
+		<title>Ryan's Portfolio - The Devil's Diner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html" class="active">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html" class="active">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -37,15 +37,15 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Hell's Kitchen</h1>
+							<h1 class="major">The Devil's Diner</h1>
 							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
-							<span class="image fit"><img src="images/hk_cutscene.gif" alt="" /></span>
+							<span class="image fit"><img src="images/devil_gameplay.gif" alt="" /></span>
 							<h2>Summary</h2>
-							<p>Hells Kitchen is a game I made with a small team of programmers for the contest Ludum Dare #50. Ludum Dare is a contest where you are given 72 hours to
+							<p>The Devil's Diner, originally called Hell's Kitchen, is a game I made with a small team of programmers for the contest Ludum Dare #50. Ludum Dare is a contest where you are given 72 hours to
 								create a small game based on a particular theme. The theme choosen for this jam was "Every 10 Seconds" so we decided to create a cooking game where Every
 								10 seconds a new customer comes in. To put a spin on genre we decided to make the game Hell Themed where the player must serve demons in order to survive.
 							</p>
-							<span class="image fit"><img src="images/hk_gameplay.gif" alt="" /></span>
+							<span class="image fit"><img src="images/devil_gameplay_2.gif" alt="" /></span>
 							<h2>Gameplay</h2>
 							<p>As the player, you are given 5 stars at the beginning and you will lose stars by not serving customers in the time given. There are six stools which can
 								can each house a demon, once the demon approaches their stool an order will appear as a ticket on the left. The game is endless and you must try to survive 
@@ -120,7 +120,7 @@
 							<br>
 							<br>
 							<ul class="icons">
-								<li>Link to Prototype - <a href="https://madness1184.itch.io/hells-kitchen">https://madness1184.itch.io/hells-kitchen</span></a></li>
+								<li>Link to Prototype - <a href="https://madcolors-entertainment.itch.io/the-devils-diner">https://madcolors-entertainment.itch.io/the-devils-diner</span></a></li>
 							</ul>
 						</div>
 					</section>
