--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<a href="#" class="image"><img src="images/devil_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Hell's Kitchen (2023)</h2>
+									<h2>The Devil's Diner (2023)</h2>
 									<p>A project made with a small team for the Ludum Dare Game Jam #50, which is a challenge where competitors have 72 hours to create a game completely 
 										from scratch. Our game stars a doomed chef who must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
 										 interactable UI, a leaderboard system, cutscenes, and a level system. It was a blast working with each other on this project, so much so that 
@@ -152,7 +152,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/space_title.png" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/fishy_title.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fishy Business (2023)</h2>
