--- a/other_pj.html
+++ b/other_pj.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -52,9 +52,6 @@
 							<p>The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
 								of them are from free download sources off the internet.
 							</p>
-							<ul class="icons">
-								<li>Repository Link - <a href="https://github.com/MaDness1184" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							</ul>
 							<p></p>
 						</div>
 					</section>
