--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html" class="active">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
