--- a/star_raid.html
+++ b/star_raid.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html" class="active">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -39,14 +39,14 @@
 					<div class="inner">
 						<h1 class="major">Star Raid</h1>
 						<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
-						<span class="image fit"><img src="images/sr_gameplay.gif" alt="" /></span>
+						<span class="image fit"><img src="images/star_gameplay_2.gif" alt="" /></span>
 						<h2>Summary</h2>
 						<p>Star Raid is a game that I started with my friend back in 2020, we planned on making it into a full game but decided to 
 							halt the progression due to the scope being too large and wanting to move onto a project more tangable. The game is set in Space
 							with a focus on multiplayer. The player(s) must try to survive against multiple waves of aleins that invade the ship that's stranded
 							in deep space.
 						</p>
-						<span class="image fit"><img src="images/sr_gameplay_2.gif" alt="" /></span>
+						<span class="image fit"><img src="images/star_gameplay.gif" alt="" /></span>
 						<h2>Gameplay</h2>
 						<p>The game starts in the hanger of the ship. The player(s) spawn near their crashed ship, they must explore and survive the alien waves that invade
 							the ship frequently. The ship is randomly generated which means that each run the loot and rooms on the ship change. Special rooms hold machines that
@@ -110,9 +110,8 @@
 							</table>
 						</div>
 						<br>
-						<br>
 						<ul class="icons">
-							<li>Link to Prototype - <a href="https://madness1184.itch.io/hells-kitchen">https://madness1184.itch.io/hells-kitchen</span></a></li>
+							<li>Repository Link - <a href="https://github.com/dev-rygy/Star-Raid" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</div>
 				</section>
