--- a/soc.html
+++ b/soc.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -38,7 +38,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Spirit of Calamity</h1>
-							<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/spirit_desc.jpg" alt="" /></span>
 							<p>A restless spirit is rare a spirit that embodies the soul of it's host. It is summoned after the host's demise only if the death was caused by great distress
 								or some kind of important duty was not fullfilled. It's is true, its origins remain unknown but some say this spirit is a division of some kind of Spirit of Calamity; a very powerful
 								spirit that is capable of having the abilities of a demi-god. As a restless spirit, the player traverses a large castle where many untold horrors lie. Your goal is to
@@ -49,9 +49,6 @@
 								I could spend countless hours talking about the lore and story of the game. This is the game I'm most passionate about and I won't settle for less than <strike>perfect</strike>
 								*nearly perfect*.
 							</p>
-							<ul class="icons">
-								<li>Repository Link - <a href="https://github.com/MaDness1184/Spirit-of-Calamity" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							</ul>
 						</div>
 					</section>
 
