--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan's Portfolio</title>
+		<title>Ryan Carpenter's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 				<!-- Welcome -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Ryan's Portfolio</h1>
+							<h1>Ryan Carpenter's Portfolio</h1>
 							<p>A collection of Ryan Carpenter's development and experience with the <a href="#https://unity.com/">Unity Engine</a> and other mediums.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
