--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan's Portfolio - Rogue Nebula</title>
+		<title>Ryan Carpenter's Portfolio - Rogue Nebula</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
