Adding a New Project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 						<div class="inner">
 							<h2>About Me</h2>
 							<p>Hello, I'm a junior Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
-								who play games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.</p>
+								who play games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
+								<br>Resume: <a href="https://drive.google.com/file/d/1j0v5-diA34gnmKcMResmDFz70OmLqGGf/view?usp=sharing">resume link</a></br></p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -61,14 +62,14 @@
 									<h3>Game Development</h3>
 									<ul>
 										<li>Over 6 years of experience with the Unity Creation Engine.</li>
-										<li>Systems officer of The Game Design Club at ASU.</li>
+										<li>President of The Game Design Club at ASU.</li>
 										<li>Participated in multiple game jams (More info Below).</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>School</h3>
 									<ul>
-										<li> Currently studying Computer Science at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
+										<li> Persuing BS in Computer Science at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
 										<li> Studied for four years at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.</li>
 										<li> Studied for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA.</li></ul>
 								</section>
@@ -86,6 +87,20 @@
 
 					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Unstable Star (2024)</h2>
+										<p> A project made for the Video Game Design Club during their 2023-24 session.
+										</p>
+										<ul class="actions">
+											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
